--- a/The Tank/thetank.html
+++ b/The Tank/thetank.html
@@ -225,13 +225,13 @@ tw-story[tags~="background1"] {
 }
 
 .side-image {
-  width: 300px;  
+  width: 350px;  /* Make the image slightly bigger */
   max-width: 100%;
   border-radius: 10px;
   object-fit: cover;
   flex-shrink: 0;
-  margin-left: -50px;  
-  margin-top: 20px; 
+  margin-left: -100px; /* Move the image further to the left */
+  margin-top: 40px; /* Move the image further down */
 }
 
 .text-block {
@@ -240,7 +240,7 @@ tw-story[tags~="background1"] {
   color: #3C3633;
   line-height: 1.6;
   text-align: left;            
-}</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Intro" tags="" position="600,250" size="100,100">&lt;audio id=&quot;background-audio&quot; loop autoplay&gt;
+}</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Intro" tags="" position="600,100" size="100,100">&lt;audio id=&quot;background-audio&quot; loop autoplay&gt;
   &lt;source src=&quot;audio/Space8-NalaSinephro.mp3&quot; type=&quot;audio/mpeg&quot;&gt;
   Your browser does not support the audio element.
 &lt;/audio&gt;
@@ -255,21 +255,15 @@ It’s late on a Saturday night, too late for you to be awake.
 
 “Alright”, she says.
 
-You and your sister sit up in bed.</tw-passagedata><tw-passagedata pid="2" name="we want your story" tags="" position="600,375" size="100,100">&lt;div class=&quot;image-text-container&quot;&gt;
+You and your sister sit up in bed.</tw-passagedata><tw-passagedata pid="2" name="we want your story" tags="" position="600,225" size="100,100">&lt;div class=&quot;image-text-container&quot;&gt;
   &lt;img src=&quot;images/tank.jpg&quot; alt=&quot;Old water tank&quot; class=&quot;side-image&quot; /&gt;
   &lt;div class=&quot;text-block&quot;&gt;
-    &lt;p&gt;When your Nonna and Nonno first came to Australia they lived inside a water tank with your Mum and older brother. Your Nonno worked on an orange farm picking fruit, and the farmer had no accommodation for them. One day, they saw the farmer throwing an old water tank into hard rubbish, and they asked him if they could save it.&lt;/p&gt;
-
-    &lt;p&gt;The water tank was flipped upside down so the old floor became the new roof, and the new floor was empty, made of dirt. The farmer added a wood-stove so they could cook.&lt;/p&gt;
-
-    &lt;p&gt;They slept on piles of clothes instead of a [[bed]]. Their luggage containing blankets from home was still making its journey across the Pacific and hadn’t yet arrived.&lt;/p&gt;
-
-    &lt;p&gt;No fridge to store food, they only ate shelf-staple food. On the one day your Nonno splashed out and bought meat, your Nonna ruined the dish because she couldn’t read English on the bottle labelled, ‘sweet and sour sauce’.&lt;/p&gt;
+    &lt;p&gt;When your Nonna and Nonno first came to Australia they lived inside a water tank with your Mum and older brother. Your Nonno worked on an orange farm picking fruit, and the farmer had no accommodation for them. One day, they saw the farmer throwing an old water tank into hard rubbish, and [[they asked him if they could save it]].&lt;/p&gt;
   &lt;/div&gt;
-&lt;/div&gt;</tw-passagedata><tw-passagedata pid="3" name="bed" tags="" position="600,500" size="100,100">In your proper bedroom with the slated roof and the insulated walls, you could imagine many places better to live than a water tank.
+&lt;/div&gt;</tw-passagedata><tw-passagedata pid="3" name="bed" tags="" position="600,475" size="100,100">In your proper bedroom with the slated roof and the insulated walls, you could imagine many places better to live than a water tank.
 
 The bedroom that could fit the water tank inside of it maybe, 
-(click-append: &quot;maybe,&quot;)[ [[if you could measure the parameters.]] ]</tw-passagedata><tw-passagedata pid="4" name="if you could measure the parameters." tags="" position="600,625" size="100,100">|fadeOut&gt;[&lt;span class=&quot;fade-target&quot;&gt;You walk the parameters of the story, graze your hand on the corrugated iron edges.&lt;/span&gt;]
+(click-append: &quot;maybe,&quot;)[ [[if you could measure the parameters.]] ]</tw-passagedata><tw-passagedata pid="4" name="if you could measure the parameters." tags="" position="600,600" size="100,100">|fadeOut&gt;[&lt;span class=&quot;fade-target&quot;&gt;You walk the parameters of the story, graze your hand on the corrugated iron edges.&lt;/span&gt;]
 
 (after: 2s)[
   (enchant: ?fadeOut, (css: &quot;animation: fadeOut 3s ease forwards;&quot;))
@@ -322,7 +316,7 @@ The bedroom that could fit the water tank inside of it maybe,
 
   /* Other styling for image grid, etc. */
 &lt;/style&gt;
-</tw-passagedata><tw-passagedata pid="6" name="Next Passage" tags="background1" position="600,750" size="100,100">&lt;div class=&quot;big-brackets&quot;&gt;
+</tw-passagedata><tw-passagedata pid="6" name="Next Passage" tags="background1" position="600,725" size="100,100">&lt;div class=&quot;big-brackets&quot;&gt;
   &lt;div class=&quot;dynamic-text&quot;&gt;
     &lt;p class=&quot;line line-1&quot;&gt;[[A ring-shaped mosquito bite on your finger greets you in the morning]].&lt;/p&gt;
     &lt;p class=&quot;line line-2&quot;&gt;She wears a scarf tight around her skull as she washes the dishes.&lt;/p&gt;
@@ -355,7 +349,12 @@ The bedroom that could fit the water tank inside of it maybe,
       &lt;p class=&quot;line-2&quot;&gt;It will also adjust based on screen size, making sure everything looks neat.&lt;/p&gt;
     &lt;/div&gt;
   &lt;/div&gt;
-&lt;/tw-passage&gt;</tw-passagedata></tw-storydata>
+&lt;/tw-passage&gt;</tw-passagedata><tw-passagedata pid="8" name="they asked him if they could save it" tags="" position="600,350" size="100,100">    &lt;p&gt;The water tank was flipped upside down so the old floor became the new roof, and the new floor was empty, made of dirt. The farmer added a wood-stove so they could cook.&lt;/p&gt;
+
+    &lt;p&gt;They slept on piles of clothes instead of a [[bed]]. Their luggage containing blankets from home was still making its journey across the Pacific and hadn’t yet arrived.&lt;/p&gt;
+
+    &lt;p&gt;No fridge to store food, they only ate shelf-staple food. On the one day your Nonno splashed out and bought meat, your Nonna ruined the dish because she couldn’t read English on the bottle labelled, ‘sweet and sour sauce’.&lt;/p&gt;
+    </tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
  * https://github.com/paulmillr/es6-shim
