--- a/The Tank/thetank.html
+++ b/The Tank/thetank.html
@@ -240,6 +240,27 @@ tw-story[tags~="background1"] {
   color: #3C3633;
   line-height: 1.6;
   text-align: left;            
+}
+.flicker-screen {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: black;
+  animation: flickerFlash 2s;
+  z-index: 9999;
+}
+
+@keyframes flickerFlash {
+  0% { opacity: 0; }
+  10% { opacity: 1; }
+  20% { opacity: 0; }
+  30% { opacity: 1; }
+  40% { opacity: 0; }
+  50% { opacity: 1; }
+  60% { opacity: 0; }
+  100% { opacity: 1; }
 }</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Intro" tags="" position="600,100" size="100,100">&lt;audio id=&quot;background-audio&quot; loop autoplay&gt;
   &lt;source src=&quot;audio/Space8-NalaSinephro.mp3&quot; type=&quot;audio/mpeg&quot;&gt;
   Your browser does not support the audio element.
@@ -361,28 +382,14 @@ The bedroom that could fit the water tank inside of it maybe,
   &lt;/div&gt;
 &lt;/div&gt;
 
-    &lt;p&gt;No fridge to store food, they only ate shelf-staple food. On the one day your Nonno splashed out and bought meat, your Nonna ruined the dish because she couldn’t read English on the bottle labelled, ‘sweet and sour sauce’.&lt;/p&gt;
-    </tw-passagedata><tw-passagedata pid="10" name="They slept on piles of clothes instead of a bed" tags="" position="600,600" size="100,100">&lt;div class=&quot;image-text-container&quot;&gt;
+</tw-passagedata><tw-passagedata pid="10" name="They slept on piles of clothes instead of a bed" tags="" position="600,600" size="100,100">&lt;div class=&quot;image-text-container&quot;&gt;
   &lt;img src=&quot;images/tanksauce.jpg&quot; alt=&quot;Old water tank&quot; class=&quot;side-image&quot; /&gt;
   &lt;div class=&quot;text-block&quot;&gt;
     &lt;p&gt;No fridge to store food, they only ate shelf-staple food. On the one day your Nonno splashed out and bought meat, your Nonna ruined the dish because she couldn’t read English on the bottle labelled, ‘sweet and sour sauce’.&lt;/p&gt;
   &lt;/div&gt;
 &lt;/div&gt;
 
-    (set: $flicker to false)
-
-(live: 0.15s)[
-  (if: $flicker is false)[
-    (set: $flicker to true)
-    (replace: ?screen)[&lt;span style=&quot;opacity:0.2;&quot;&gt;Loading...&lt;/span&gt;]
-  ]
-  (else:)[
-    (set: $flicker to false)
-    (replace: ?screen)[&lt;span style=&quot;opacity:1;&quot;&gt;Loading...&lt;/span&gt;]
-  ]
-]
-
-|screen&gt;[&lt;span&gt;Loading...&lt;/span&gt;]
+|flicker&gt;[&lt;div class=&quot;flicker-screen&quot;&gt;&lt;/div&gt;]
 
 (after: 2s)[
   (goto: &quot;bed&quot;)
