--- a/The Tank/thetank.html
+++ b/The Tank/thetank.html
@@ -256,6 +256,12 @@ tw-story[tags~="background1"] {
 @keyframes slowFadeToBlack {
   0% { opacity: 0; }
   100% { opacity: 1; }
+}
+.bold-link {
+  color: #3C3633;
+  font-weight: bold;
+  text-decoration: none;
+  cursor: pointer;
 }</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Intro" tags="" position="600,100" size="100,100">&lt;audio id=&quot;background-audio&quot; loop autoplay&gt;
   &lt;source src=&quot;audio/Space8-NalaSinephro.mp3&quot; type=&quot;audio/mpeg&quot;&gt;
   Your browser does not support the audio element.
@@ -278,8 +284,12 @@ You and your sister sit up in bed.</tw-passagedata><tw-passagedata pid="2" name=
   &lt;/div&gt;
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="3" name="bed" tags="" position="600,725" size="100,100">In your proper bedroom with the slated roof and the insulated walls, you could imagine many places better to live than a water tank.
 
-The bedroom that could fit the water tank inside of it maybe, 
-(click-append: &quot;maybe,&quot;)[ &lt;span style=&quot;font-weight:bold;&quot;&gt;if you could measure the parameters.&lt;/span&gt; ]
+The bedroom that could fit the water tank inside of it 
+(click: &quot;maybe,&quot;)[
+  (replace: ?maybe)[&lt;span class=&quot;bold-link&quot;&gt;maybe,&lt;/span&gt;]
+  (append: ?after-maybe)[[[if you could measure the parameters.]]]
+]
+&lt;span ?maybe&gt;&lt;tw-link&gt;maybe,&lt;/tw-link&gt;&lt;/span&gt;&lt;span ?after-maybe&gt;&lt;/span&gt;
 </tw-passagedata><tw-passagedata pid="4" name="if you could measure the parameters." tags="" position="600,850" size="100,100">|fadeOut&gt;[&lt;span class=&quot;fade-target&quot;&gt;You walk the parameters of the story, graze your hand on the corrugated iron edges.&lt;/span&gt;]
 
 (after: 2s)[
@@ -393,7 +403,7 @@ The bedroom that could fit the water tank inside of it maybe,
 
 (after: 10s)[
   (goto: &quot;bed&quot;)
-]</tw-passagedata></tw-storydata>
+]</tw-passagedata><tw-passagedata pid="11" name="[if you could measure the parameters." tags="" position="725,850" size="100,100"></tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
  * https://github.com/paulmillr/es6-shim
