--- a/The Tank/thetank.html
+++ b/The Tank/thetank.html
@@ -250,13 +250,13 @@ tw-story[tags~="background1"] {
   0% { opacity: 0; }
   100% { opacity: 1; }
 }
-tw-link,
-tw-link:link,
-tw-link:visited,
-tw-link.visited,
 tw-link[click-append] {
   color: #3C3633 !important;
   font-weight: bold !important;
+  text-decoration: none !important;
+}
+tw-link[click-append]:hover {
+  color: #3C3633 !important;
   text-decoration: none !important;
 }</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Intro" tags="" position="600,100" size="100,100">&lt;audio id=&quot;background-audio&quot; loop autoplay&gt;
   &lt;source src=&quot;audio/Space8-NalaSinephro.mp3&quot; type=&quot;audio/mpeg&quot;&gt;
