--- a/The Tank/thetank.html
+++ b/The Tank/thetank.html
@@ -258,6 +258,12 @@ tw-link[click-append] {
 tw-link[click-append]:hover {
   color: #3C3633 !important;
   text-decoration: none !important;
+}
+.custom-link {
+  all: unset;
+  color: #3C3633 !important;
+  font-weight: bold !important;
+  cursor: pointer;
 }</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Intro" tags="" position="600,100" size="100,100">&lt;audio id=&quot;background-audio&quot; loop autoplay&gt;
   &lt;source src=&quot;audio/Space8-NalaSinephro.mp3&quot; type=&quot;audio/mpeg&quot;&gt;
   Your browser does not support the audio element.
@@ -281,7 +287,10 @@ You and your sister sit up in bed.</tw-passagedata><tw-passagedata pid="2" name=
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="3" name="bed" tags="" position="600,725" size="100,100">In your proper bedroom with the slated roof and the insulated walls, you could imagine many places better to live than a water tank.
 
 The bedroom that could fit the water tank inside of it maybe, 
-(click-append: &quot;maybe,&quot;)[ [[if you could measure the parameters.]] ]</tw-passagedata><tw-passagedata pid="4" name="if you could measure the parameters." tags="" position="600,850" size="100,100">|fadeOut&gt;[&lt;span class=&quot;fade-target&quot;&gt;You walk the parameters of the story, graze your hand on the corrugated iron edges.&lt;/span&gt;]
+(click-append: &quot;maybe,&quot;)[ [[if you could measure the parameters.]] ]
+(link: &quot;&lt;span class=&#39;custom-link&#39;&gt;maybe,&lt;/span&gt;&quot;)[
+  (append: ?page)[ [[if you could measure the parameters.]] ]
+]</tw-passagedata><tw-passagedata pid="4" name="if you could measure the parameters." tags="" position="600,850" size="100,100">|fadeOut&gt;[&lt;span class=&quot;fade-target&quot;&gt;You walk the parameters of the story, graze your hand on the corrugated iron edges.&lt;/span&gt;]
 
 (after: 2s)[
   (enchant: ?fadeOut, (css: &quot;animation: fadeOut 3s ease forwards;&quot;))
