--- a/The Tank/thetank.html
+++ b/The Tank/thetank.html
@@ -536,18 +536,20 @@ The bedroom that could fit the water tank inside of it maybe,
 &lt;span class=&quot;falling-text&quot; style=&quot;--random-x: _x; animation-delay: _delay + s;&quot;&gt;
   _text
 &lt;/span&gt;</tw-passagedata><tw-passagedata pid="16" name="messy table" tags="backgroundimage3" position="300,1125" size="100,100">(set: $images to (a: &quot;letter.jpg&quot;, &quot;family.jpg&quot;, &quot;photo3.png&quot;, &quot;ticket.png&quot;, &quot;postcard.jpg&quot;))
-
 (set: $collage to &quot;&quot;)
 
-(set: $imageCount to 5) &lt;!-- Set how many images you want to appear --&gt;
+&lt;!-- Set the number of images to display --&gt;
+(set: $imageCount to 5)
 
-(for: each _i, _ from 1 to $imageCount)[
-  (set: _image to $images&#39;s _i)
-  (set: _x to (random: 0, 90))
+&lt;!-- Loop through the images array using indices from range --&gt;
+(for: _i, (range: 0, $imageCount - 1))[
+  &lt;!-- Generate random positions and rotation for each image --&gt;
+  (set: _x to (random: 0, 90)) 
   (set: _y to (random: 0, 90))
   (set: _r to (random: -30, 30))
   
-  (set: $collage to $collage + &quot;&lt;img src=&#39;images/&quot; + _image + &quot;&#39; class=&#39;scrap-img&#39; style=&#39;top:&quot; + _y + &quot;%; left:&quot; + _x + &quot;%; transform: rotate(&quot; + _r + &quot;deg);&#39;&gt;&quot;)
+  &lt;!-- Add the HTML for each image --&gt;
+  (set: $collage to $collage + &quot;&lt;img src=&#39;images/&quot; + $images&#39;string(_i) + &quot;&#39; class=&#39;scrap-img&#39; style=&#39;top:&quot; + _y + &quot;%; left:&quot; + _x + &quot;%; transform: rotate(&quot; + _r + &quot;deg);&#39;&gt;&quot;)
 ]
 
 $collage
