--- a/The Tank/thetank.html
+++ b/The Tank/thetank.html
@@ -533,24 +533,20 @@ The bedroom that could fit the water tank inside of it maybe,
 
 &lt;span class=&quot;falling-text&quot; style=&quot;--random-x: _x; animation-delay: _delay + s;&quot;&gt;
   _text
-&lt;/span&gt;</tw-passagedata><tw-passagedata pid="16" name="messy table" tags="backgroundimage3" position="300,1125" size="100,100">&lt;!-- Define an array of image filenames --&gt;
+&lt;/span&gt;</tw-passagedata><tw-passagedata pid="16" name="messy table" tags="backgroundimage3" position="300,1125" size="100,100">&lt;!-- Set up the images array --&gt;
 (set: $images to (array: &quot;letter.jpg&quot;, &quot;family.jpg&quot;, &quot;photo3.png&quot;, &quot;ticket.png&quot;, &quot;postcard.jpg&quot;))
 
-&lt;!-- Initialize a string variable to hold the image HTML --&gt;
-(set: $collage to &quot;&quot;)
+&lt;!-- Randomize 5 images and set their random positions and rotations --&gt;
+(set: $image1 to &quot;&lt;img src=&#39;images/&quot; + (either: 1, $images) + &quot;&#39; class=&#39;scrap-img&#39; style=&#39;top:&quot; + (random: 0, 90) + &quot;%; left:&quot; + (random: 0, 90) + &quot;%; transform: rotate(&quot; + (random: -30, 30) + &quot;deg);&#39;&gt;&quot;)
+(set: $image2 to &quot;&lt;img src=&#39;images/&quot; + (either: 1, $images) + &quot;&#39; class=&#39;scrap-img&#39; style=&#39;top:&quot; + (random: 0, 90) + &quot;%; left:&quot; + (random: 0, 90) + &quot;%; transform: rotate(&quot; + (random: -30, 30) + &quot;deg);&#39;&gt;&quot;)
+(set: $image3 to &quot;&lt;img src=&#39;images/&quot; + (either: 1, $images) + &quot;&#39; class=&#39;scrap-img&#39; style=&#39;top:&quot; + (random: 0, 90) + &quot;%; left:&quot; + (random: 0, 90) + &quot;%; transform: rotate(&quot; + (random: -30, 30) + &quot;deg);&#39;&gt;&quot;)
+(set: $image4 to &quot;&lt;img src=&#39;images/&quot; + (either: 1, $images) + &quot;&#39; class=&#39;scrap-img&#39; style=&#39;top:&quot; + (random: 0, 90) + &quot;%; left:&quot; + (random: 0, 90) + &quot;%; transform: rotate(&quot; + (random: -30, 30) + &quot;deg);&#39;&gt;&quot;)
+(set: $image5 to &quot;&lt;img src=&#39;images/&quot; + (either: 1, $images) + &quot;&#39; class=&#39;scrap-img&#39; style=&#39;top:&quot; + (random: 0, 90) + &quot;%; left:&quot; + (random: 0, 90) + &quot;%; transform: rotate(&quot; + (random: -30, 30) + &quot;deg);&#39;&gt;&quot;)
 
-&lt;!-- Add a specific number of images (5 for now) with random positions and rotations --&gt;
-(for: _i, 1, 10)[
-  &lt;!-- Random position and rotation for each image --&gt;
-  (set: _top to (random: 0, 90))
-  (set: _left to (random: 0, 90))
-  (set: _rotation to (random: -30, 30))
+&lt;!-- Concatenate the images into one big string --&gt;
+(set: $collage to $image1 + $image2 + $image3 + $image4 + $image5)
 
-  &lt;!-- Add the image HTML to the collage string --&gt;
-  (set: $collage to $collage + &quot;&lt;img src=&#39;images/&quot; + (either: _i, $images) + &quot;&#39; class=&#39;scrap-img&#39; style=&#39;top:&quot; + _top + &quot;%; left:&quot; + _left + &quot;%; transform: rotate(&quot; + _rotation + &quot;deg);&#39;&gt;&quot;)
-]
-
-&lt;!-- Display the collage of images --&gt;
+&lt;!-- Display the collage --&gt;
 $collage
 </tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
